--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -1,21 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: spring-boot-k8s-deployment
+  name: jenkins-k8s-integration-assignment
 spec:
   selector:
     matchLabels:
-      app: spring-boot-k8s
+      app: tomcat-with-k8s
   replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: spring-boot-k8s
+        app: tomcat-with-k8s
     spec:
+      imagePullSecrets:
+        - name: my-docker-registry-secret
       containers:
-        - name: spring-boot-k8s
-          image: javatechie/devops-integration # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
+        - name: tomcat-with-k8s
+          image: rohithmarigowda/assignment:master-100 # Image that will be used to containers in the cluster
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
 
@@ -25,13 +27,12 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8ssvc
+  name: tomcat-k8ssvc
 spec:
   selector:
-    app: spring-boot-k8s
+    app: tomcat-with-k8s
   ports:
     - protocol: "TCP"
       port: 8080 # The port that the service is running on in the cluster
       targetPort: 8080 # The port exposed by the service
-      nodePort: 32000
   type: NodePort # type of the service.
